--- a/content-org/site.org
+++ b/content-org/site.org
@@ -340,69 +340,67 @@ text-align: justify}
 </style>
 #+end_export
 
-#+begin_comment
-Research page under construction
-#+end_comment
-
 My dissertation, [[/files/dissertationFinal.pdf][The dynamics of perennial crop production and processing]], focused on the economics of perennial crop production, with applications to Brazilian sugarcane and the expansion of the Brazilian biofuel industry.
+** Peer-Reviewed Journal Articles
+*** The influence of water conservation practices on US nurseries' decision to sell native plants
+(with Melinda Knuth, Alicia Rihn, Bridget Behe, Bryan Peterson, and Marco Palma) - Accepted at /HortScience/.
+*** A Diamond in the Rough: Identifying Heritage Crop Niche Markets in the U.S. Using a Discrete Choice Experiment
+(with Yefan Nian, R. David Lamie, Michael Vassalos, Ben Boyles, and Diana Vossbrinck) - /Agricultural Economics/, 2025.
+*** [[https://doi.org/10.1002/jaa2.107][Developing Practical Measures of the Price of Pesticide Resistance: A Flexible Computational Framework with Global Sensitivity Analysis]]
+(with Chanheung Cho, Zachary Brown, and Kevin Gross) - /Journal of the Agricultural and Applied Economics Association/, 2024, 3(1), 212--227.
 
-** Peer Reviewed Publications
-
-*** [[https://doi.org/10.1002/jaa2.107][Developing practical measures of the price of pesticide resistance: A flexible computational framework with global sensitivity analysis]]
-(with Chanheung Cho, Zachary Brown, and Kevin Gross) - Accepted at /Journal of the Agricultural and Applied Economics Association/.
-
-*Abstract*:
+/Abstract:/
 Pesticide resistance poses an increasing challenge for agricultural sustainability. Pesticide susceptibility is a depletable biological resource, but resistance management rarely quantifies marginal, forward-looking economic costs to users of depleting this resource. We use a generic stochastic bioeconomic model of pesticide resistance evolution in a crop pest population, stochastic dynamic programming, and global sensitivity analysis to analyze the 'marginal user costs' of resistance. The most impactful parameters on these costs are population density dependence and pesticide prices. Least impactful is the fitness cost of resistance, which is noteworthy because of prior emphasis on this parameter in the resistance management literature.
+*** [[https://doi.org/10.1111/agec.12812][Estimating Perennial Crop Supply Response: A Methodology Literature Review]]
+(with Jonathon Siegle, Gregory Astill, and Zoë Plakias) - /Agricultural Economics/, 2024, 55(2), 159--180.
 
-*** [[https://doi.org/10.1111/agec.12812][Estimating perennial crop supply response: A methodology literature review]]
-(with Jonathon Siegle, Greg Astill, and Zoë Plakias) - Early View at /Agricultural Economics/.
+/Outstanding Published Paper which Significantly Contributed to the SCE Discipline, Specialty Crop Economics Section, Agricultural and Applied Economics Association, 2024./
 
-*Abstract*:
+/Abstract:/
 Perennial crops are important both economically and as a component of a healthy and nutritious diet (e.g., many fruits and nuts). However, the study of perennial crop production and farmer response to output price changes (i.e., supply response) is complex thanks to the dynamic nature of investment and decision making in these industries. The body of literature relevant to perennial crop supply response is also small relative to that of annual commodity crops. In this article, we contribute the first literature review on perennial crop supply response modeling in more than 30 years. We catalog advancements in estimating perennial crop supply response and discuss the application of these methods and trade-offs economists should be aware of when using them. In addition, we highlight future modeling developments that may be valuable to the field, with the hope this research will encourage additional economic research on this interesting and important topic and in turn provide new insights for perennial crop producers and policymakers.
-
 *** [[https://doi.org/10.1017/aae.2023.21][Minimizing the costs of biorefinery processing by managing perennial crop age: The case of Brazilian sugarcane]]
 (with David Zilberman) - /Journal of Agricultural and Applied Economics/, 2023, 55(2), 376--398.
 
-*Abstract*:
+/Abstract:/
 We develop and analyze an unexplored mechanism to reduce biorefinery supply chain costs when the feedstock is a perennial crop: adjusting the age structure, and hence yield, of the perennial feedstock. The non-monotonicity of the age-yield function introduces a non-convexity to the cost minimization problem. We show that, despite this, the problem has a solution and present analytic and numeric comparative statics, finding that larger refineries are most likely to benefit from optimizing age structure. The model is calibrated to the sugarcane industry in Brazil. The cost reductions from optimizing age, compared to the observed regional average age, are less than 1%.
+*** [[https://doi.org/10.3390/horticulturae8040290][Willingness-to-Pay for Produce: A Meta-Regression Analysis Comparing the Stated Preferences of Producers and Consumers]]
+(with Alice Kilduff) - /Horticulturae/, 2022, 8(4), 290.
 
-*** [[https://doi.org/10.3390/horticulturae8040290][Willingness-to-pay for produce: A meta-regression analysis comparing the stated preferences of producers and consumers]]
-(with Alice Kilduff) - /Horticulturae/ 2022, 8(4), 290.
+/Featured Paper and Editor's Choice./
 
-*Abstract*:
+/Abstract:/
 Willingness-to-pay (WTP) estimates help agribusinesses estimate whether a new product is likely to be profitable. For produce, new products, such as new fruit varieties, need to be adopted by producers before they can be sold to consumers. The study of ex ante fruit and vegetable producer preferences is relatively new. This study uses meta-regression analysis to compare the estimated WTP premium between U.S. producers and consumers to determine whether they differ. After controlling for differences in study methods, product attributes, and potential publication bias, the producer WTP was between 14.16 and 27.73 percentage points higher. Subject to several caveats and limitations, this suggests that consumer WTP can be a sufficient metric for the profitability of new produce products.
-
 *** [[https://doi.org/10.1093/jee/toab231][Balancing bees and pest management: Projected costs of proposed bee-protective neonicotinoid regulation in California]]
 (with Kevi Mace, Jessica Rudder, Rachael Goodhue, Tor Tolhurst, Hanlin Wei, Elizabeth Grafton-Cardwell, Ian Grettnberger, Houston Wilson, Robert Van Steenwyk, Frank Zalom, and John Steggall) - /Journal of Economic Entomology/, 2022, 115(1), 10--25.
 
-*Abstract*:
+/Outstanding Published Paper which Significantly Contributed to Transdisciplinary Work or Specialty Crop Industries, Specialty Crop Economics Section, Agricultural and Applied Economics Association, 2022./
+
+/Abstract:/
 Neonicotinoid insecticides are widely used in agriculture, including in many California specialty crops. With mounting evidence that these insecticides are harmful to bees, state and national governments have increasingly regulated their use. The European Union, Canada, and United States have imposed use restrictions on several neonicotinoids, such as on the timing of applications. In 2020, California proposed a draft regulation to mitigate harm to managed pollinators from four nitroguanidine-substituted neonicotinoids (NGNs): clothianidin, dinotefuran, imidacloprid, and thiamethoxam. We use data on California pesticide use from 2015 to 2017 to analyze the economic and pest management implications of the 2020 draft proposed regulation for seven crops: almond, cherry, citrus, cotton, grape, strawberry, and tomato. From 2015 to 2017, these crops accounted for approximately 85% of total hectares treated with NGNs and 87% of NGN use by kilograms of active ingredient applied in treatments that would have been affected by the proposed regulation. These insecticides often primarily target Hemipteran insect pests. In most cases there are alternatives; however, these are often more expensive per hectare and do not have the same residual effectiveness as the NGNs, which are systemic insecticides. Overall, we estimate that pest management costs for these crops would have increased an estimated $13.6 million in 2015, $12.8 million in 2016, and $11.1 million in 2017 if the 2020 draft proposed regulation had been in effect, representing a 61% to 72% increase in the cost of managing the target pests.
-
 ** Working Papers
-
-*** [[/files/230821sugarcaneReplanting.pdf][Predicting perennial crop yields using the replant rate: The case of sugarcane in Brazil]]
-(with David Zilberman)
-
-*Abstract*:
-This paper presents a novel and parsimonious method of predicting the dynamic yield impacts of a change in a perennial crop's replant rate using only data on the crop's age-yield function. We test the econometric specification implied by this model on Brazilian sugarcane data and find that it explains approximately one third of yield variation during the study period of 2005 to 2013, lending support to the hypothesis that reductions in the renewal rate after the financial crisis in 2008–9 and subsequent compensatory replanting contributed to this yield decline. The framework presented here is flexible and can be applied to any other perennial crop, so long as data on the age-yield function is available.
-
-*** [[/files/OptimalManagementOfOrchards_200909.pdf][Optimal management of orchards]]
+*** Improving economic performance of vineyard establishment: PIVC grapevines can increase profits for growers
+(with Kyle A. Freedman and Mark Hoffmann) - Revise and resubmit at /American Journal of Enology and Viticulture/.
+*** Patterns of Sustainability Practices in North Carolina's Ornamental Horticulture Industry
+(with Nick Berenson, Amanda Solliday, and Melinda Knuth) - Revise and resubmit at /Choices/.
+*** U.S. Consumer's Perceptions of Undocumented Agricultural Labor
+(with Ben Campbell, Will Secor, and Samyam Shrestha) - Under review
+*** The Optimal Management of Orchards
 (with Leo Simon)
 
-*Abstract*:
-A fundamental issue in perennial crop economics is finding the optimal time to replace trees in an orchard. Orchards have two key characteristics: they consist of trees of multiple vintages, and the trees have a non-monotonic yield curve. We present the first analysis of optimal tree replacement in an orchard that has both characteristics. Our results show that cyclical production is optimal in the long-run, and that optimally managed orchards converge uniformly to the long-run cycle. Our results have implications for orchard valuation, orchard planting, and orchard conversion. We are also the first to provide comparative statics on the long-run cycle radius.
+*** Predicting perennial crop yields using the replant rate: The case of sugarcane in Brazil
+(with David Zilberman)
 
-** Works in progress
-- [[/files/SCSE Poster Draft Final.pdf][Demand and supply of specialty crop supply elasticities: Insights from a profession-wide survey]] (with Zoë Plakias, link to AAEA poster)
-- The welfare impacts of citrus greening (with Gregory Astill and Zoë Plakias)
-- Perennial crop supply response in state-space models with non-negativity constraints (with Gregory Astill and Zoë Plakias)
-- Measuring grower willingness-to-pay for improvements in cucurbit disease resistance (with Alice Kilduff)
-- Measuring grower willingness-to-pay for improvements in sweetpotato disease resistance
-- Exploring the impact of water technology choices on native plant sales in US nurseries (with Melinda Knuth, Alicia Rihn, Bridget Behe, Marco Palma, and Bryan Peterson)
-- Strengthening and expanding muscadine markets (with Chris Gunter, Mark Hoffmann, Lynette Johnson, Penelope Perkins-Veazie and Craig Mauney)
-- Updating the Southeastern Strawberry Production Guide (PD: Mark Hoffmann)
-- U.S Consumers' Perceptions on Agricultural Labor Supply (with Vitalis Othuon, Benjamin Campbell, and William Secor)
-- Regionally Identified Heirloom Crops as a Viable Niche for Small Specialty Producers (with Ben Boyles, Diana Fossbrinck, David Lamie, Yefan Nian, and Michael Vassalos)
+*** The opportunities and challenges of adopting controlled environment technology in the US strawberry nursery industry
+(with Jung Hoon Han, Yue Shan, and Mark Hoffmann)
+*** The welfare effects of controlled environment propagation in the US strawberry nursery industry
+(with Jung Hoon Han and Yue Shan)
+** Works in Progress
+- State-space approaches to perennial crop supply response: An application to citrus greening in Florida (with Zoë Plakias and Greg Astill)
+- Measuring the potential impacts of further citrus greening spread on the US citrus industry with a dynamic EDM (with Zoë Plakias and Greg Astill)
+- Measuring grower willingness-to-pay for improvements in sweetpotato disease resistance (with Alice Kilduff)
+- Estimating costs and returns to controlled environment strawberry nurseries (with Yue Shan, Mark Hoffmann and Ricardo Hernandez)
+- Consumer Preferences for Heritage Crops (with Dave Lamie, Michael Vassalos, Yefan Nian, Diana Vossbrink, and Ben Boyles)
+- USDA Cost of Production Estimates for NC Blueberry and Grape Industry (with Derek Washburn and Cassie Scanlan)
 
 [[/photos/sweetpotato_figurine.jpg]]
 
