--- a/content-org/site.org
+++ b/content-org/site.org
@@ -236,7 +236,7 @@ efficient - you'll see changes almost instantly.
 
 
 
-* About This Website
+* About This Website                                               :noexport:
   :PROPERTIES:
   :EXPORT_FILE_NAME: about
   :END:
@@ -317,10 +317,6 @@ body {
 
 *** Assistant Professor and Extension Specialist
 
-#+begin_comment
-UNDER CONSTRUCTION
-#+end_comment
-
 I am an assistant professor and extension specialist in the [[https://cals.ncsu.edu/agricultural-and-resource-economics][Department of Agricultural and Resource Economics at North Carolina State University]]. My work is focused on the economics of specialty crops and the economics of agricultural policy more generally. Applications have included analyzing agro-environmental policy, market analysis, minimizing costs of processing supply chains, and optimizing orchard replacement.
 
 I hold a Ph.D. and M.S. in agricultural and resource economics from the [[https://are.berkeley.edu][University of California, Berkeley]] as well as a Bachelor of Resource Economics (Hons. 1M) from the [[http://sydney.edu.au][University of Sydney, Australia]]. During my postdoctoral studies at the [[https://are.ucdavis.edu][Department of Agricultural and Resource Economics at UC Davis]], I co-authored several inter-disciplinary reports for the California Department of Food and Agriculture analyzing the expected impacts of proposed pesticide regulations.
@@ -342,9 +338,16 @@ text-align: justify}
 My dissertation, [[/files/dissertationFinal.pdf][The dynamics of perennial crop production and processing]], focused on the economics of perennial crop production, with applications to Brazilian sugarcane and the expansion of the Brazilian biofuel industry.
 ** Peer-Reviewed Journal Articles
 *** The influence of water conservation practices on US nurseries' decision to sell native plants
-(with Melinda Knuth, Alicia Rihn, Bridget Behe, Bryan Peterson, and Marco Palma) - Accepted at /HortScience/.
-*** A Diamond in the Rough: Identifying Heritage Crop Niche Markets in the U.S. Using a Discrete Choice Experiment
+(with Melinda Knuth, Alicia Rihn, Bridget Behe, Bryan Peterson, and Marco Palma) - Forthcoming at /HortScience/.
+
+/Abstract:/
+Native plants are becoming a highly demanded horticulture product due to the general public’s interest and government policies promoting them. As a result, plant growers are increasingly incorporating native plants into their plant offerings. But, what business and environmental factors influence grower adoption of native plants? This gap in the literature is addressed through an investigation of U.S. grower survey data from 2013 and 2018 using a zero- one-inflated-beta (ZOIB) model. Results indicate that some key factors such as water sources and type of plant products influence the likelihood of native plants adoption across the models, but variables such as rainfall and population density around business location do not. These results have important implications for policies that promote the growth of native plants and prospective horticultural industry growers.
+*** [[https://doi.org/10.1111/agec.70043][A Diamond in the Rough: Identifying Heritage Crop Niche Markets in the U.S. Using a Discrete Choice Experiment]]
 (with Yefan Nian, R. David Lamie, Michael Vassalos, Ben Boyles, and Diana Vossbrinck) - /Agricultural Economics/, 2025.
+
+/Abstract:/
+Heritage crops are grown from open-pollinated old cultivars and are considered significant in their connection to human culture and food systems. Although developing market opportunities and promoting their production can be an effective strategy to conserve them, little is known about US consumers' awareness, interest, and preferences for them. In this study, we conducted a national survey and used a discrete choice experiment with five different crops (i.e., apple, cabbage, rice, squash, and tomato) to systematically investigate US consumers' preferences for heritage crops. We found that US consumers' awareness of heritage crops is limited. Their willingness-to-pays (WTPs) for these crops are relatively modest and vary between heirloom crops, which emphasize the legacy and time aspects of the crops, and heritage crops, which demonstrate the cultural and historical aspects of the crops. However, consumers' WTPs for heritage crops appear consistent across US regions and consumers' residency areas (i.e., cities, suburbs, and rural areas). Only a few consumers' lifestyle variables tend to be correlated to their WTPs. The findings of this study provide substantial empirical evidence to help farmers identify marketing opportunities for heritage crops and examine the feasibility of using a market-driven approach to conserve heritage crops in the United States.
+
 *** [[https://doi.org/10.1002/jaa2.107][Developing Practical Measures of the Price of Pesticide Resistance: A Flexible Computational Framework with Global Sensitivity Analysis]]
 (with Chanheung Cho, Zachary Brown, and Kevin Gross) - /Journal of the Agricultural and Applied Economics Association/, 2024, 3(1), 212--227.
 
